--- a/women_config.json
+++ b/women_config.json
@@ -190,7 +190,8 @@
           "col_names": ["MN3"],
           "dtype": "num_categorical",
           "convert_values": {
-            "DK": "NaN"
+            "DK": "NaN",
+            "Missing": "NaN"
           }
         },
         "anc_3_components": {
@@ -201,12 +202,14 @@
           "col_names": ["MN18"],
           "values": [
               "Government hospital", 
-              "Private hospital", 
               "Commune health centre", 
+              "Poly clinlic", 
+              "Private hospital", 
               "Private clinic", 
-              "Policlinic", 
-              "Other public", 
-              "Private maternity home"
+              "Private maternity home", 
+              "Other private medical",
+              "Sectoral Hospital (Army, Police...)",
+              "Other public"
           ]
         },
         "caesarean_del": {
@@ -216,24 +219,20 @@
         "pnc_mother": {
           "sub_indicators": {
             "health_check_after_birth": {
-              "col_names": ["PN4", "PN8"],
-              "values": ["Yes"]
+              "col_names": null,
+              "values": null
             },
             "pnc_2_days": {
               "time_cat": {
-                "col_names": ["PN21U"],
-                "values": ["Days", "Hours"]
+                "col_names": null,
+                "values": null
               },
               "time_num": {
-                "col_names": ["PN21N"],
-                "dtype": "num_categorical",
-                "convert_values": {
-                  "DK": "99.0"
-                }
+                "col_names": null,
+                "dtype": null,
+                "convert_values": null
               },
-              "pnc_health_provider": {
-                "col_names": ["PN22A", "PN22B", "PN22F", "PN22G"]
-              }
+              "pnc_health_provider": null
             }
           }
         },
@@ -251,11 +250,7 @@
           },
           "time_num": {
             "col_names": ["MN25N"],
-            "dtype": "num_categorical",
-            "convert_values": {
-              "IMMEDIATELY": "0.0",
-              "DK / DONT REMEMBER": "99.0"
-            }
+            "dtype": "num_categorical"
           }
         },
         "mother_edu": {
@@ -263,7 +258,7 @@
           "values": {
               "none_primary": ["Preschool", "Primary"],
               "secondary": ["Lower Secondary", "Upper Secondary", "Professional School"],
-              "higher": ["College/University & above"],
+              "higher": ["College/University and above"],
               "missing": ["NaN"]
           }
         },
@@ -277,6 +272,180 @@
               "birth_2_years": ["Yes"]
           }
         }
-      }
+    },
+    "2006": {
+        "anc_4_visits": {
+          "col_names": ["MN3"],
+          "dtype": "num_categorical",
+          "convert_values": {
+            "DK": "NaN",
+            "Missing": "NaN"
+          }
+        },
+        "anc_3_components": {
+          "col_names": ["mn3b", "mn3c", "mn3d"],
+          "values": ["Yes"]
+        },
+        "inst_delivery": {
+          "col_names": ["mn8"],
+          "values": [
+              "Government hospital", 
+              "Comm./Office Health clinic", 
+              "Government clinic/health center", 
+              "Private hospital", 
+              "Private maternity home", 
+              "Private clinic", 
+              "Gov. maternity home",
+              "Other private medical"
+          ]
+        },
+        "caesarean_del": {
+          "col_names": ["MN19"],
+          "values": ["Yes"]
+        },
+        "pnc_mother": {
+          "sub_indicators": {
+            "health_check_after_birth": {
+              "col_names": null,
+              "values": null
+            },
+            "pnc_2_days": {
+              "time_cat": {
+                "col_names": null,
+                "values": null
+              },
+              "time_num": {
+                "col_names": null,
+                "dtype": null,
+                "convert_values": null
+              },
+              "pnc_health_provider": null
+            }
+          }
+        },
+        "low_bw": {
+          "col_names": ["MN22"],
+          "dtype": "num_categorical",
+          "convert_values": {
+            "DK": "NaN"
+          }
+        },
+        "early_bf": {
+          "time_cat": {
+            "col_names": ["mn13a"],
+            "values": ["Immediately", "Hours", "Minute", "Days"]
+          },
+          "time_num": {
+            "col_names": ["mn13"],
+            "dtype": "num_categorical"
+          }
+        },
+        "mother_edu": {
+          "col_names": ["wm11"],
+          "values": {
+              "none_primary": ["Preschool/kindergarten", "Primary"],
+              "secondary": ["Lower secondary", "Secondary", "Long apprentice", "Short apprentice", "Non-standard curriculum"],
+              "higher": ["Higher"],
+              "missing": ["NaN"]
+          }
+        },
+        "women_file_subset": {
+          "col_names": {
+              "quest_complete": ["hh9"],
+              "birth_2_years": ["cm12"]
+          },
+          "values": {
+              "quest_complete": ["Completed"],
+              "birth_2_years": ["Yes"]
+          }
+        }
+    },
+    "2000": {
+        "anc_4_visits": {
+          "col_names": ["MN3"],
+          "dtype": "num_categorical",
+          "convert_values": {
+            "DK": "NaN",
+            "Missing": "NaN"
+          }
+        },
+        "anc_3_components": {
+          "col_names": ["mn3b", "mn3c", "mn3d"],
+          "values": ["Yes"]
+        },
+        "inst_delivery": {
+          "col_names": ["mn8"],
+          "values": [
+              "Government hospital", 
+              "Comm./Office Health clinic", 
+              "Government clinic/health center", 
+              "Private hospital", 
+              "Private maternity home", 
+              "Private clinic", 
+              "Gov. maternity home",
+              "Other private medical"
+          ]
+        },
+        "caesarean_del": {
+          "col_names": ["MN19"],
+          "values": ["Yes"]
+        },
+        "pnc_mother": {
+          "sub_indicators": {
+            "health_check_after_birth": {
+              "col_names": null,
+              "values": null
+            },
+            "pnc_2_days": {
+              "time_cat": {
+                "col_names": null,
+                "values": null
+              },
+              "time_num": {
+                "col_names": null,
+                "dtype": null,
+                "convert_values": null
+              },
+              "pnc_health_provider": null
+            }
+          }
+        },
+        "low_bw": {
+          "col_names": ["MN22"],
+          "dtype": "num_categorical",
+          "convert_values": {
+            "DK": "NaN"
+          }
+        },
+        "early_bf": {
+          "time_cat": {
+            "col_names": ["mn13a"],
+            "values": ["Immediately", "Hours", "Minute", "Days"]
+          },
+          "time_num": {
+            "col_names": ["mn13"],
+            "dtype": "num_categorical"
+          }
+        },
+        "mother_edu": {
+          "col_names": ["wm11"],
+          "values": {
+              "none_primary": ["Preschool/kindergarten", "Primary"],
+              "secondary": ["Lower secondary", "Secondary", "Long apprentice", "Short apprentice", "Non-standard curriculum"],
+              "higher": ["Higher"],
+              "missing": ["NaN"]
+          }
+        },
+        "women_file_subset": {
+          "col_names": {
+              "quest_complete": ["hh9"],
+              "birth_2_years": ["cm12"]
+          },
+          "values": {
+              "quest_complete": ["Completed"],
+              "birth_2_years": ["Yes"]
+          }
+        }
+    }
   }
 }
