updated tabulation, mvp

--- a/config.json
+++ b/config.json
@@ -450,7 +450,7 @@
                             "DHNTB": "North Central and Central Coast",
                             "BTB": "North Central and Central Coast",
                             "TN": "Central Highlands",
-                            "BD": "Northern Midlands and Mountain",
+                            "DB": "Northern Midlands and Mountain",
                             "TB": "Northern Midlands and Mountain"
                         }
                     },
